Update WhatsApp link in order-bakso.html

--- a/order-bakso.html
+++ b/order-bakso.html
@@ -156,7 +156,7 @@ function kirimWA(){
   teks += 'Bakso Urat Sedang: '+getQty('us')+'%0A';
   teks += document.getElementById('total').innerText;
 
-  window.open('https://wa.me/628XXXXXXXXXX?text='+teks,'_blank');
+  window.open('https://wa.me/+6285691916995?text='+teks,'_blank');
 }
 </script>
 
